--- a/BudgetManager/manifest.json
+++ b/BudgetManager/manifest.json
@@ -12,7 +12,14 @@
         "default_icon": "icon16.png",
         "default_popup": "popup.html"
     },
+    "options_page": "options.html",
+    "background": {
+        "scripts": ["eventPage.js"],
+        "persistent": false
+    },
     "permissions": [
-        "storage"
+        "storage",
+        "notifications",
+        "contextMenus"
     ]
 }
